/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.webank.ai.fate.common.mlmodel.buffer;
option java_outer_classname = "FeatureBinningParam";


message IVParam {
    repeated double woe_array = 1;
    repeated double iv_array = 2;
    repeated int64 event_count_array = 3;
    repeated int64 non_event_count_array = 4;
    repeated double event_rate_array = 5;
    repeated float non_event_rate_array = 6;
    repeated double split_points = 7;
    double iv = 8;
    bool is_woe_monotonic = 9;
    int64 bin_nums = 10;
}

message FeatureBinningParam{
    repeated IVParam iv_result = 1;
    repeated IVParam host_iv_result = 2;
    repeated int64 cols = 3;
}